[package]
name = "core_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
futures-util = "0.3.30"
itertools = "0.13.0"
rand = "0.8.5"

# required by main.rs
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["net", "rt-multi-thread", "macros", "sync"] }
